# KeplerKV

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: README.md  examples.md  manual.md  planning.md
include/: command_ast_nodes.h  environment.h  environment_interface.h  error_msgs.h  file_io_macros.h  handler.h  lexer.h  parser.h  store.h  store_value.h  syntax_tree.h  terminal_colors.h  token.h  util.h
scripts/: sanitize_text.sh
src/: Makefile  command_ast_nodes.cpp  handler.cpp  lexer.cpp  main.cpp  parser.cpp  store.c  store.cpp  store_value.cpp  syntax_tree.cpp  util.cpp
tests/: execute_all.sh  memory_tests.sh
tests/inputs/: 1_set.kep  1_set.txt  2_get.kep  2_get.txt  3_del.kep  3_del.txt  4_update.kep  4_update.txt  5_resolve.kep  5_resolve.txt  6_rename.kep  6_rename.txt  7_incr_decr.kep  7_incr_decr.txt  8_app_pre.kep  8_app_pre.txt  9_transactions.kep
tests/outputs/: 1_set_out.txt  2_get_out.txt  3_del_out.txt  4_update_out.txt  5_resolve_out.txt  6_rename_out.txt  7_incr_decr_out.txt  8_app_pre_out.txt  9_transactions_out.txt
